# California_housing

./: Makefile  README.md  config.env  dev-environment.yml  pyproject.toml
california_housing/: __init__.py  dataset.py  features.py  main.py  plots.py
california_housing/modeling/: predict.py  train.py
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: MLE_D1_LC1_California_Prediction.ipynb
